# mullvadvpn-app

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  compile-for-android.bash  env.sh  rn-cli.config.js
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mullvadvpn/: MainActivity.java  MainApplication.java  WireGuardVpnService.java
android/app/src/main/java/com/mullvadvpn/ServicePackage/: MobileAppBridge.java  ServicePackage.java
android/gradle/wrapper/: gradle-wrapper.properties
app/: app.android.js  routes.js
app/components/: Connect.js  HeaderBar.js  Layout.js  Login.js  LoginStyles.js  PlatformWindow.android.js  SelectLocation.js  SelectLocationStyles.js  Switch.android.js
conductor-cli/: Cargo.toml
conductor-cli/src/: main.rs
conductor-core/: Cargo.toml
conductor-core/src/: convention.rs  database.rs  lib.rs  types.rs
conductor-daemon/: Cargo.toml
conductor-daemon/src/: main.rs
dnet/: README.md
for_tinc/: README.md  min_size.md  relay.json.tinc_example  relays.json.tinc_example  settings.json.tinc_example
for_tinc/run/: README.md  key.pem
gui/locales/it/: messages.po
gui/locales/sv/: relay-locations.po
gui/src/renderer/components/: AppButton.tsx  ModalAlert.tsx  ModalBackdrop.tsx  ModalContainer.tsx  ModalContent.tsx  ModalTransitionContainer.tsx  Support.tsx  SupportStyles.tsx
mullvad-android/: build.gradle
mullvad-android/app/: build.gradle
mullvad-android/app/src/main/: AndroidManifest.xml
mullvad-android/app/src/main/java/net/mullvad/vpnapp/: JsonRpcWsClient.kt  MainActivity.kt  MullvadDaemon.kt
mullvad-android/app/src/main/res/layout/: main_activity.xml
mullvad-android/app/src/main/res/values/: ids.xml  strings.xml
mullvad-cli/: Cargo.toml
mullvad-cli/src/cmds/: account.rs  relay.rs
mullvad-daemon/: Cargo.toml
mullvad-daemon/src/: lib.rs  management_interface.rs  relays.rs  rpc_address_file.rs  settings.rs  shutdown.rs  tinc_key.rs
mullvad-ipc-client/src/: lib.rs
mullvad-rpc/: Cargo.toml
mullvad-rpc/src/: https_client_with_sni.rs  lib.rs  remote_errors.rs  rest.rs
mullvad-types/src/: custom_tunnel.rs  endpoint.rs  relay_constraints.rs  relay_list.rs  settings.rs
resource_dir/: README.md  api_root_ca.pem  runtime_env.bat  runtime_env.sh  settings.json
resource_dir/libs/: libcrypto.1.0.0.dylib  libcrypto.1.1.dylib  libmosquitto.1.5.1.dylib  libmyfec.dylib  libssl.1.1.dylib
resource_dir/taptun/windows/: mtap.bat
resource_dir/taptun/windows/tap-win64/: addtap.bat
resource_dir/tinc/example/: tinc-up  tinc.conf
resource_dir/tinc/example/macos/: tinc-down
resource_dir/tinc/example/windows/: host-down.bat  host-up.bat  tinc-down.bat  tinc-up.bat  tinc.conf
resource_dir/tinc/linux/: tinc-report
resource_dir/tinc/macos/: tinc-report  tincd
talpid-core/: Cargo.toml
talpid-core/src/firewall/: android.rs  macos.rs  mod.rs
talpid-core/src/offline/: macos.rs
talpid-core/src/process/: mod.rs  tinc.rs
talpid-core/src/tunnel/: mod.rs  tinc.rs
talpid-core/src/tunnel/tinc/: mod.rs
talpid-core/src/tunnel_state_machine/: blocked_state.rs  connected_state.rs  connecting_state.rs  disconnected_state.rs
talpid-ipc/src/: lib.rs
talpid-types/: Cargo.toml
talpid-types/src/net/: mod.rs  tinc.rs
talpid-types/src/net/tinc/: info.rs  mod.rs  net_tool.rs  sys_tool.rs
talpid-types/src/net/tinc/domain/: auth.rs  geo.rs  mod.rs  proxy.rs  tinc.rs
tinc-plugin/: Cargo.toml
tinc-plugin/src/: info.rs  lib.rs  listener.rs  main.rs  operator.rs
