[workspace]
members = [
    "mullvad-daemon",
    "mullvad-cli",
    "mullvad-problem-report",
    "mullvad-ipc-client",
    "mullvad-paths",
    "mullvad-types",
    "mullvad-rpc",
    "mullvad-tests",
    "talpid-openvpn-plugin",
    "tinc-plugin",
    "talpid-core",
    "talpid-ipc",
]
exclude = ["dist-assets/binaries/shadowsocks-rust"]