[workspace]
members = [
    "conductor-cli",
    "conductor-core",
    "conductor-daemon",
    "mullvad-daemon",
    "mullvad-cli",
    "mullvad-problem-report",
    "mullvad-ipc-client",
    "mullvad-jni",
    "mullvad-paths",
    "mullvad-types",
    "mullvad-rpc",
    "mullvad-tests",
    "talpid-openvpn-plugin",
    "tinc-plugin",
    "talpid-core",
    "talpid-ipc",
]
exclude = ["dist-assets/binaries/shadowsocks-rust"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
