[package]
name = "conductor-daemon"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[dependencies]
actix = "0.8.2"
actix-web = { version="1.0.0", features=["ssl"] }
chrono = "0.4.6"
clap = "2.32"
env_logger = "0.6"
err-derive = "0.1.5"
futures = "0.1.23"
futures-timer = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
openssl = "0.10"
rand = "0.7"

ipnetwork = { git = "https://github.com/mullvad/ipnetwork", branch = "fix-deserialization" }
mullvad-types = { path = "../mullvad-types" }

conductor-core = { path = "../conductor-core" }
tinc-plugin = { path = "../tinc-plugin" }