[package]
name = "mullvad-rpc"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <linus@mullvad.net>", "Erik Larkö <erik@mullvad.net>", "Andrej Mihajlov <and@mullvad.net>"]
description = "Mullvad VPN RPC clients. Providing an interface to query our infrastructure for information."
license = "GPL-3.0"

[features]
tls = ["hyper-tls", "native-tls"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.11"
futures = "0.1.15"
jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs" }
jsonrpc-client-http = { git = "https://github.com/mullvad/jsonrpc-client-rs" }
serde_json = "1.0"
tokio-core = "0.1"
hyper = "0.11"
hyper-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }
log = "0.4"

mullvad-types = { path = "../mullvad-types" }
