[package]
name = "tinc-plugin"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[[bin]]
path = "./src/main.rs"
name = "tinc-plugin"

[dependencies]
duct = "0.12"
err-derive = "0.1.5"
log = "0.4"
tokio = "0.1"
futures = "0.1"
derive-try-from-primitive = "0.1.0"
openssl = "0.10"
serde_derive = "1.0"
serde = "1.0"
talpid-ipc = { path = "../talpid-ipc"}
jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
